<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="returnToStart"
    android:background="@drawable/win"
    tools:context=".WinningActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="You win!"
        android:autoSizeTextType="uniform"
        android:textColor="#161415"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.001">

        <TextView
            android:id="@+id/energy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/energy"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userpath"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/userpath"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/shortpath"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/shortpath"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="168dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:text="Tap to restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

</androidx.constraintlayout.widget.ConstraintLayout>