<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/generating"
    tools:context=".PlayManuallyActivity">

    <LinearLayout
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046">

        <LinearLayout
            android:id="@+id/wholeMaze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/toggle4maze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="MazeOn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wholeMaze"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/toggle4solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SolutionOn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solution"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/toggle4wall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="WallOn"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wall"
                android:textSize="16sp"
                android:textColor="#FFEB3B"/>
        </LinearLayout>
    </LinearLayout>


    <edu.wm.cs.cs301.JunzhaoSun.gui.MazePanel
        android:id="@+id/panel"
        android:layout_width="365dp"
        android:layout_height="381dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <LinearLayout
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="left"
            android:onClick="turnLeft"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="up"
            android:onClick="moveForward"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:text="right"
            android:onClick="turnRight"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction"
        app:layout_constraintVertical_bias="0.872">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="zoomIn"
            android:text="Zoom In" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="zoomOut"
            android:text="Zoom Out" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>