<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/generating"
    tools:context=".PlayAnimationActivity">

    <LinearLayout
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046">

        <LinearLayout
            android:id="@+id/wholeMaze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/toggle4maze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="MazeOn"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wholeMaze"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/toggle4solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SolutionOn"/>/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solution"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/toggle4wall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="WallOn"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wall"
                android:textColor="#FFEB3B"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <edu.wm.cs.cs301.JunzhaoSun.gui.MazePanel
        android:id="@+id/mazePanel"
        android:layout_width="365dp"
        android:layout_height="381dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="Stop"
        android:text="@string/start"
        android:showText="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="198dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <TextView
            android:id="@+id/remainEnergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remaining Energy"
            android:textColor="#FFEB3B" />

        <ProgressBar
            android:id="@+id/remainBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressBackgroundTint="#FFEB3B" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction"
        app:layout_constraintVertical_bias="0.872">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="zoomIn"
            android:text="Zoom In" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="zoomOut"
            android:text="Zoom Out" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163">

        <Switch
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Forward"
            android:textColor="#FFEB3B"
            android:onClick="ForFail"/>

        <Switch
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Left"
            android:textColor="#FFEB3B"
            android:onClick="LeftFail"/>

        <Switch
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Right"
            android:textColor="#FFEB3B"
            android:onClick="RightFail"/>

        <Switch
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Backward"
            android:textColor="#FFEB3B"
            android:onClick="BackFail"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>